WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14056
REGRESSION (
r21113
-21143): TR background not repainted via style class change
https://bugs.webkit.org/show_bug.cgi?id=14056
Summary
REGRESSION (r21113-21143): TR background not repainted via style class change
David Kilzer (:ddkilzer)
Reported
2007-06-09 22:20:09 PDT
* SUMMARY On eHarmony.com, the background of certain questions is shaded to let the user know when they've selected an answer. This stopped working in recent nightlies, but works in shipping Safari. * STEPS TO REPRODUCE 1. Launch Safari/WebKit. 2. Open test page (to be attached). 3. Click first radio button. * EXPECTED RESULTS The background of the TR element should turn light blue. * ACTUAL RESULTS The background of the radio button turns light blue. You must hit Cmd-A to select-all text on the page, then click somewhere to get partial highlighting to be drawn. * REGRESSION This is a regression from shipping Safari 2.0.4 (419.3) on Mac OS X 10.4.9 (8P135) which works as expected. Tested with a local debug build of WebKit
r22080
with the above software. * NOTES This works with WebKit Nightly
r20943
. Need to do a binary search to determine what caused this to stop working.
Attachments
Test case (partial reduction)
(19.68 KB, text/html)
2007-06-09 22:22 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Reduction
(441 bytes, text/html)
2007-06-10 19:39 PDT
,
mitz
no flags
Details
Repaint the table row
(9.26 KB, patch)
2007-06-20 00:27 PDT
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-06-09 22:22:07 PDT
Created
attachment 14922
[details]
Test case (partial reduction) Partially reduced test case that no longer relies on any external resources, but it could be narrowed down further.
David Kilzer (:ddkilzer)
Comment 2
2007-06-09 23:09:40 PDT
(In reply to
comment #0
)
> This works with WebKit Nightly
r20943
. Need to do a binary search to determine > what caused this to stop working.
Fails:
r21143
Works:
r21113
Note that the test case works in both Firefox 2.0.0.4 and Opera 9.21.
mitz
Comment 3
2007-06-10 19:19:39 PDT
(In reply to
comment #2
)
> Fails:
r21143
> Works:
r21113
That range includes the elimintation of repaintObjectsBeforeLayout <
http://trac.webkit.org/projects/webkit/changeset/21120
>.
mitz
Comment 4
2007-06-10 19:39:14 PDT
Created
attachment 14927
[details]
Reduction
mitz
Comment 5
2007-06-10 20:01:26 PDT
RenderTableRow::layout() doesn't do any repainting. In the selfNeedsLayout case i should.
Mark Rowe (bdash)
Comment 6
2007-06-13 21:49:15 PDT
<
rdar://problem/5269394
>
mitz
Comment 7
2007-06-20 00:27:03 PDT
Created
attachment 15136
[details]
Repaint the table row
Beth Dakin
Comment 8
2007-06-20 13:33:02 PDT
Comment on
attachment 15136
[details]
Repaint the table row Looks good to me!
Mark Rowe (bdash)
Comment 9
2007-06-20 17:10:02 PDT
Landed in
r23676
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug