2007-06-20  Mitz Pettel  <mitz@webkit.org>

Reviewed by Beth.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14056
          REGRESSION (r21113-21143): TR background not repainted via style class change

        Test: fast/repaint/table-row.html

        * rendering/RenderTableRow.cpp:
        (WebCore::RenderTableRow::layout): Added a repaint to make up for the case where the
        table row also needs layout, so it doesn't get a repaint in setStyle().

2007-06-20  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Beth.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=14056
          REGRESSION (r21113-21143): TR background not repainted via style class change

        * fast/repaint/table-row-expected.checksum: Added.
        * fast/repaint/table-row-expected.png: Added.
        * fast/repaint/table-row-expected.txt: Added.
        * fast/repaint/table-row.html: Added.


Canonical link: https://commits.webkit.org/18469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23676 268f45cc-cd09-0410-ab3c-d52691b4dbfc